REGRESSION(268320@main): WebDriver fullscreen/input type=file tests failing https://bugs.webkit.org/show_bug.cgi?id=263887 rdar://117683701

Reviewed by NOBODY (OOPS!).

This commit introduces the ability to force user gesture on script
execution in WebAutomationSession, so we can be deliberate about which
Automation Protocol script requires user gesture, rather than the older
behavior of backing every script execution with a user gesture.

* Source/WebKit/UIProcess/Automation/Automation.json:
* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::evaluateJavaScriptFunction):
* Source/WebKit/UIProcess/Automation/WebAutomationSession.h:
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::evaluateJavaScriptFunction):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.h:
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.js:
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.messages.in: